--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
-@font-face{
-  font-family: PTSans;
-  src: url(fonts/PTSans.ttf);
-}
+
 html{
-  font-family: PTSans;
+  font-family: PT Sans Narrow;
   text-transform: uppercase;
+  
+}
+
+body{
+  margin: 0;
 }
 
 a{
@@ -21,90 +23,363 @@ ul{
   padding-left: 0;
 }
 
+
+.container{
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.clearfix::after {
+  content: "";
+
+  display: table;
+  clear: both;
+}
+
+.clear{
+  content: "";
+  clear: both;
+}
 .main-header {
   font-size: 16px;
   color:white;
-  font-family: PTSans;
   line-height: 20px;
 
-  background-color:#000000; 
+  background-color:black;
+
+  height: 70px;
+  margin-bottom: 60px; 
+}
+
+.header-logo{
+  width: 120px;
+  min-height: 70px;
+  float: left;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  margin-right: 40px; 
+}
+
+.main-navigation{
+  width: 680px;
+  min-height: 70px;
+  text-transform: uppercase;
+
+  float: left;
+}
+
+.main-navigation ul li{
+  font-size: 16px;
+  line-height: 40px;
+  font-weight: bold;
+
+  display: inline;
+  margin-right: 40px;
+
+  font-family:PT Sans Narrow;
+}
+
+.main-navigation ul li:last-child{
+  margin-right: 0px;
+}
+
+.user-block{
+  width: 100px;
+  min-height: 70px;
+  float: left;
+  padding-top: 25px;
+
+  text-align: center;
+}
+
+.login{
+  font-family:PT Sans Narrow;
+  
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .main-header a{
   color:white;
 }
 
-h1{
+.shop{
+  min-height: 940px; 
+}
+
+
+.main-title{
   font-size: 30px;
   color:#000000;
   line-height: 42px;
+  font-family: PT Sans Narrow;
+
+  width: 940px;
+  margin-bottom: 25px;
+}
+
+.breadcrumbs{
+  width: 940px;
+  margin-bottom: 40px;
+}
+
+.breadcrumbs a{
+  margin-right: 30px;
 }
 
 .breadcrumbs li{
   font-size: 14px;
-  line-height: 20px
+  line-height: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: inline; 
 }
 
 .breadcrumbs li:last-child a{
   color: #aba9a7;
+  margin: 0;
 }
 
 .categories{
   font-size: 14px;
   line-height: 18px;
+
+  min-height: 570px;
+  width: 220px;
+  float: left;
+
+}
+
+.categories-up{
+  width: 200px;
+  margin-bottom: 60px;
+}
+
+.categories-down{
+  width: 200px;
+  margin-bottom: 50px;
+}
+
+.categories-down li{
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.products{
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .categories-title{
   font-size: 24px;
   line-height: 30px;
+  text-transform: uppercase;
 }
 
-.catalog-item p{
+.catalog-items{
+  width: 720px;
+  float: left;
+  margin-bottom: 60px;
+}
+
+.catalog-item1{
   font-size: 14px;
   line-height: 18px;
-  text-transform: none
+  font-weight: bold;
+
+  width: 220px;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 30px; 
+}
+
+.catalog-item1 p{
+  margin-bottom: 18px;
+}
+
+.catalog-item2 p{
+  margin-bottom: 18px;
+}
+
+.catalog-item2{
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: bold;
+
+  width: 220px;
+  float: left;
+  margin-right: 20px; 
+}
+
+.catalog-item1:last-child, .catalog-item2:last-child{
+  margin-right: 0;
+}
+
+.price{
+  width: 115px;
+  height: 40px;
+  float: left;
+  margin: 0;
+
+  background-color: #e5e5e5;
+}
+
+.price p{
+  font-size: 14px;
+  line-height: 14px;
+  text-align: center;
+  font-weight: bold;
 }
 
 .buy-btn{
   background-color: #000000;
+
+  width: 80px; 
+  height: 30px; 
+  float: left;
+  padding-top: 10px;
+
+  text-align: center;
 }
 
 .buy-btn a{
   font-size: 14px;
   color:  #ffffff;
   line-height: 18px;
+
 }
 
-.catalog-btns{
+.pagination{
+  width: 220px;
+  margin-right: auto;
+  margin-left: auto;
+
+}
+
+.pagination-btn{
   background-color: #000000;
+
+  height: 33px;
+  width: 45px;
+  float: left;
+  margin-right: 8px;
+  padding-top: 12px;
+
+  text-align: center;
 }
 
-.catalog-btns a{
+.pagination-btn:last-child{
+  margin-right: 0px;
+}
+
+.pagination a{
   font-size: 14px;
   color: #ffffff;
   line-height: 18px;
 }
 
+.main-page{
+  width: 940px;
+  min-height: 720px;
+  margin-bottom: 40px;
+}
+
+.item-gallery{
+  width: 510px;
+  float: left;
+  margin-right: 40px;
+}
+
+.information{
+  width: 390px;
+  float: left;
+  margin-top: 40px;
+}
+
+.information-title{
+  width: 90px;
+  float: left;
+  margin-bottom: 20px;
+}
+
 .item-article{
   color: #aeaeae;
+  width: 140px;
+  float: right;
+}
+
+.product-info{
+  width: 390px;
+  float: left;
+  margin-bottom: 30px;
+}
+
+.information-down{
+  width: 390px;
+  float: left;
+  margin-top: 40px;
+}
+
+.set{
+  margin-left: 20px; 
 }
 
 .set li{
   list-style-type: disc;
 }
 
+.information p{
+  font-size: 14px;
+  text-align: 24px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: PT Sans Narrow;
+}
+
 .footer{
   font-size: 14px;
   color: #ffffff;
   line-height: 24px;
+  font-family: PT Sans Narrow;
+  text-transform: uppercase;
+  font-weight: bold;
 
   background-image: url(../img/footer-fon.png);
+
+  min-height: 190px; 
+
 }
 
 .footer a{
   color:#ffffff;
 }
 
-html{
-  color:#000000;
+.footer-contacts{
+  width: 380px;
+  float: left;
+  margin-right: 20px;
+  margin-top: 40px;
+}
+
+.footer-social{
+  width: 140px;
+  float: left;
+  margin-right: 260px;
+  margin-top: 40px;
+
+  text-align: center;
+}
+
+.footer-copyright{
+  width: 140px;
+  float: left;
+  margin-top: 40px;
+
+  text-align: center;
 }
