--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,11 @@
-
-html{
-  font-family: PT Sans Narrow;
-  text-transform: uppercase;
-  
-}
-
 body{
   margin: 0;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
 }
-
-a{
-  text-decoration: none;
-  color:#000000;
-}
-
-li{
-  list-style-type: none;
-}
-
-ul{
-  margin-left: 0;
-  padding-left: 0;
-}
-
-
 .container{
   width: 940px;
   margin: 0 auto;
@@ -37,208 +19,292 @@ ul{
   clear: both;
 }
 
-.clear{
-  content: "";
-  clear: both;
-}
-.main-header {
-  font-size: 16px;
-  color:white;
-  line-height: 20px;
+.main-header{
+  color: #ffffff;
 
   background-color:black;
 
-  height: 70px;
-  margin-bottom: 60px; 
+  min-height: 70px; 
+}
+.main-header a{
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .header-logo{
-  width: 120px;
-  min-height: 70px;
+  width: 111px;
   float: left;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  margin-right: 40px; 
+  margin-right: 40px;
+  margin-top: 25px; 
+  padding-left: 20px;
+}
+.header-logo img{
+  width: 111px;
+  height: 24px;
 }
 
 .main-navigation{
-  width: 680px;
-  min-height: 70px;
-  text-transform: uppercase;
+  width: 560px;
+  margin-right: 100px;
 
   float: left;
 }
+.main-navigation ul{
+  margin: 0;
+  padding: 0;
 
-.main-navigation ul li{
+  list-style: none;
+  font-size: 0;
+}
+
+.main-navigation li{
+  display: inline-block;
+
   font-size: 16px;
-  line-height: 40px;
-  font-weight: bold;
-
-  display: inline;
-  margin-right: 40px;
-
-  font-family:PT Sans Narrow;
+  line-height: 20px;
+  vertical-align: top;
 }
-
-.main-navigation ul li:last-child{
-  margin-right: 0px;
+.main-navigation a{
+  display: block;
+  padding: 25px 20px;
 }
-
+.main-navigation a:hover{
+  background-color: #242424;
+}
 .user-block{
-  width: 100px;
-  min-height: 70px;
-  float: left;
-  padding-top: 25px;
+  max-width: 120px;
+  float: right;
 
   text-align: center;
 }
-
 .login{
-  font-family:PT Sans Narrow;
-  
-  font-size: 16px;
-  text-transform: uppercase;
-  font-weight: bold;
-}
+  position: relative;
+  display: inline-block;
+  padding: 25px 20px;
+  padding-left: 40px;
 
-.main-header a{
-  color:white;
+  vertical-align: top;
 }
+.login:hover{
+  background-color: #242424;
+}
+.login::before{
+  content: "";
+  position: absolute;
+  top: 26px;
+  left: 10px;
 
+  width: 18px;
+  height: 18px;
+
+  background: transparent url(../img/sprite.png) no-repeat;
+  background-position: -10px -10px;
+  opacity: 0.3;
+}
+.login:hover::before{
+  opacity: 1;
+}
+main{
+  background: #f8f5f2 url(../img/shop-background.jpg);
+  padding-top: 40px;
+}
 .shop{
-  min-height: 940px; 
+  width: 940px; 
+  min-height: 910px; 
 }
-
-
+.shop h1{
+  margin-top: 0px;
+}
 .main-title{
   font-size: 30px;
   color:#000000;
   line-height: 42px;
-  font-family: PT Sans Narrow;
 
   width: 940px;
   margin-bottom: 25px;
+  margin-top: 0;
 }
 
 .breadcrumbs{
   width: 940px;
+  min-height: 40px;
   margin-bottom: 40px;
 }
+.breadcrumbs ul{
+  margin: 0;
+  padding: 0;
 
-.breadcrumbs a{
-  margin-right: 30px;
+  list-style-image: url(../img/list-style.png);
 }
-
 .breadcrumbs li{
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: bold;
-  text-transform: uppercase;
-  display: inline; 
+  float: left;
+  line-height: 20px; 
 }
-
+.breadcrumbs li:first-child{
+  list-style: none;
+}
 .breadcrumbs li:last-child a{
   color: #aba9a7;
-  margin: 0;
 }
-
+.breadcrumbs a{
+  position: relative;
+  display: block;
+  text-decoration: inherit;
+  font: inherit;
+  color: #000000;
+  margin-right: 40px;
+  margin-left: 20px;
+}
+.breadcrumbs li:first-child a{
+  margin-left: 0;
+}
 .categories{
-  font-size: 14px;
-  line-height: 18px;
-
   min-height: 570px;
   width: 220px;
   float: left;
-
 }
-
-.categories-up{
-  width: 200px;
-  margin-bottom: 60px;
-}
-
-.categories-down{
-  width: 200px;
-  margin-bottom: 50px;
-}
-
-.categories-down li{
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.products{
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
 .categories-title{
   font-size: 24px;
   line-height: 30px;
-  text-transform: uppercase;
-}
 
-.catalog-items{
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+.categories ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.categories-up{
+  width: 200px;
+  margin-bottom: 30px;
+  float: left;
+}
+.producers li, .products li{
+  vertical-align: top;
+  margin-bottom: 20px;
+}
+.producers input,.products input{
+  display: none;
+}
+.producers input + label,.products input + label{
+  color: #000000;
+  cursor: pointer;
+}
+.producers input + label::before, .products input + label::before{
+  content: "";
+  display: inline-block;
+  height: 22px;
+  width: 22px;
+  margin-right: 20px;
+
+  vertical-align: middle;
+  background: #ffffff url(../img/sprite.png) no-repeat;
+}
+.producers input + label::before{
+  background-position: -10px -88px;
+}
+.producers input:checked + label::before{
+  background-position: -10px -128px;
+}
+.products input + label::before{
+  background-position: -10px -168px;
+}
+.products input:checked + label::before{
+  background-position: -11px -47px;
+}
+.producers label:hover, .products label:hover{
+  color: #8d6e50;
+}
+.categories-down{
+  width: 200px;
+  margin-bottom: 40px;
+  float: left;
+}
+.producers label{
+  width: 170px;
+  height: 50px;
+}
+.products span{
+  margin-left: 42px;
+}
+.show{
+  width: 110px;
+  height: 45px;
+  float: left;
+}
+.show input{
+  width: 110px;
+  height: 45px;
+  
+  color: #ffffff;
+  background-color: #000000;
+
+  border: 0px;
+  outline: none;
+
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.show input:hover{
+  background-color: #663d15;
+}
+.show a{
+
+}
+.catalog-item{
   width: 720px;
   float: left;
   margin-bottom: 60px;
 }
-
 .catalog-item1{
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: bold;
-
   width: 220px;
+  min-height: 290px;
   float: left;
   margin-right: 20px;
-  margin-bottom: 30px; 
+  margin-bottom: 30px;
+  background-color: #f8f8f8;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5); 
 }
-
-.catalog-item1 p{
-  margin-bottom: 18px;
+.catalog-item{
+  text-transform: none;
 }
-
-.catalog-item2 p{
-  margin-bottom: 18px;
-}
-
 .catalog-item2{
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: bold;
-
   width: 220px;
+  min-height: 290px;
   float: left;
-  margin-right: 20px; 
+  margin-right: 20px;
+  background-color: #f8f8f8; 
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
-
 .catalog-item1:last-child, .catalog-item2:last-child{
   margin-right: 0;
 }
-
+.item-name{
+  margin-left: 15px;
+}
 .price{
   width: 115px;
   height: 40px;
   float: left;
   margin: 0;
+  margin-left: 15px;
 
   background-color: #e5e5e5;
 }
-
 .price p{
-  font-size: 14px;
-  line-height: 14px;
+  line-height: 16px;
   text-align: center;
-  font-weight: bold;
-}
+  text-transform: uppercase;
 
+  margin-top: 10px;
+}
 .buy-btn{
   background-color: #000000;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
 
   width: 80px; 
   height: 30px; 
@@ -247,19 +313,13 @@ ul{
 
   text-align: center;
 }
-
-.buy-btn a{
-  font-size: 14px;
-  color:  #ffffff;
-  line-height: 18px;
-
+.buy-btn:hover{
+  background-color: #663d15; 
 }
-
 .pagination{
   width: 220px;
   margin-right: auto;
   margin-left: auto;
-
 }
 
 .pagination-btn{
@@ -274,14 +334,25 @@ ul{
   text-align: center;
 }
 
+.pagination-btn:nth-child(2){
+  background-color: #ffffff;
+  color: #000000;
+  pointer-events: none;
+  cursor: default;
+}
 .pagination-btn:last-child{
   margin-right: 0px;
 }
-
+.pagination-btn:hover{
+  background-color: #663d15;
+}
+.pagination-btn:nth-child(2):hover{
+  background-color: #ffffff;
+}
 .pagination a{
-  font-size: 14px;
+  font: inherit;
+  text-decoration: inherit;
   color: #ffffff;
-  line-height: 18px;
 }
 
 .main-page{
@@ -290,12 +361,27 @@ ul{
   margin-bottom: 40px;
 }
 
-.item-gallery{
-  width: 510px;
+.items-gallery{
+  width: 480px;
   float: left;
-  margin-right: 40px;
+  margin-right: 60px;
 }
-
+.item-gallery1{
+  width: 460px;
+  float: left;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  margin-bottom: 20px;
+}
+.item-gallery{
+  width: 140px;
+  height: 149px;
+  float: left;
+  margin-right: 20px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+.item-gallery:last-child{
+  margin-right: 0;
+}
 .information{
   width: 390px;
   float: left;
@@ -325,9 +411,14 @@ ul{
   float: left;
   margin-top: 40px;
 }
+.information-down h2{
+  margin-bottom: 30px;
+}
 
 .set{
-  margin-left: 20px; 
+  padding: 0;
+  margin-left: 20px;
+  list-style-image: url(../img/list-style.png); 
 }
 
 .set li{
@@ -337,8 +428,6 @@ ul{
 .information p{
   font-size: 14px;
   text-align: 24px;
-  text-transform: uppercase;
-  font-weight: bold;
   font-family: PT Sans Narrow;
 }
 
@@ -347,8 +436,6 @@ ul{
   color: #ffffff;
   line-height: 24px;
   font-family: PT Sans Narrow;
-  text-transform: uppercase;
-  font-weight: bold;
 
   background-image: url(../img/footer-fon.png);
 
@@ -360,26 +447,84 @@ ul{
   color:#ffffff;
 }
 
+.footer-find{
+  text-decoration: underline;
+}
+
 .footer-contacts{
   width: 380px;
   float: left;
   margin-right: 20px;
   margin-top: 40px;
 }
+.footer-contacts a:hover {
+  text-decoration: none;
+}
 
 .footer-social{
-  width: 140px;
+  width: 150px;
   float: left;
   margin-right: 260px;
   margin-top: 40px;
 
   text-align: center;
 }
+.social-btn {
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
 
+  background: #000000 url("../img/sprite.png") no-repeat center;
+  transition: 
+    background-position 0.5s,
+    background-color 0.5s;
+}
+.social-btn:hover {
+  background-color: #ffffff;
+}
+.social-btn-vk {
+  background-position: -2px -278px;
+}
+
+.social-btn-fb {
+  background-position: 5px -394px;
+}
+
+.social-btn-inst {
+  background-position: 2px -198px;
+}
+
+.social-btn-vk:hover {
+  background-position: -2px -315px;
+}
+
+.social-btn-fb:hover {
+  background-position: 5px -353px;
+}
+
+.social-btn-inst:hover {
+  background-position: 2px -239px;
+}
 .footer-copyright{
-  width: 140px;
+  width: 130px;
   float: left;
   margin-top: 40px;
 
   text-align: center;
+}
+.copyright-btn{
+  width: 130px;
+  height: 30px;
+  float: left;
+  padding-top: 10px;
+
+  text-decoration: none;
+
+  background-color: #000000;
+}
+.footer-copyright .copyright-btn:hover{
+  color: #000000;
+
+  background-color: #ffffff;
 }
